--- a/wrr/site-plan-rafting.html
+++ b/wrr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>White Water Rafting Site Plan</h1>
+    <h2>Roberto Kippins</h2>
+    <h2>WDD 130</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,11 +20,26 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p> The site will be used as a marketing strategy to advertise our services
+        and to drive excitement in people looking for an adventure. We will
+        offer different packages and different price points that are affordable
+        for everyone. I want customers to come to the website and get the urge
+        to go rafting. Ideally It would be great if they can make bookings on
+        the site but for now, I will advertise the packages and pricings along
+        with a number to call to make the bookings. The website will be
+        accessible to anyone and from any device which means we will need to
+        work on making the web pages dynamic but very simple to navigate.
+    </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>The audience will be adventurous people and families who love the
+        outdoor and have adventure seeking personalities. Since there is some
+        danger involved in rafting, I think it is important to have an age
+        restriction. I was thinking of an age range of 15 – 65. The website will
+        be accessible to anyone and from any device which means we will need to
+        work on making the web pages dynamic but very simple to navigate.
+    </p>
     <!-- change this -->
 
     <hr />
@@ -54,9 +69,9 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
+        <td class="primary">[#120E02]</td>
+        <td class="secondary">[#251D04]</td>
+        <td class="accent1">[#B83A14]</td>
         <td class="accent2"></td>
       </tr>
     </table>
@@ -67,11 +82,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Luminari
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Andale Mono
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
