--- a/wrr/index.html
+++ b/wrr/index.html
@@ -11,7 +11,7 @@
    <header>
         <nav>
             <div class="header-logo">
-                <a href="/wrr"id="logo_link" >
+                <a href="/wrr" id="logo_link" >
                     <img class="logo" src="images/Circular/png/logo-color.png" alt="Dry Oar Logo" height="60" width="60">
                 </a>
             </div>
@@ -32,31 +32,33 @@
                 <a class='book' href="packages.html">Book Now</a>
             </div>
 
-        </section>   
-   <div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon" height="50" width="50">
-            <h2>Rivers</h2>
         </section>
-        <section class="camping-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/bonfire.png" alt="fire icon" height="50" width="50">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon" height="50" width="50">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html">Join Us</a>
-        </section>
-    </main>
+    </div>   
+    <div>
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon" height="50" width="50">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/bonfire.png" alt="fire icon" height="50" width="50">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon" height="50" width="50">
+                <h2>Rapids</h2>
+            </section>
+            <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class='join' href="rivers.html">Join Us</a>
+            </section>
+        </main>
+    </div>
     <footer>
         <p>Dry Oar &copy; 2022 - Roberto Kippins</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
